opencart BETA (autologin failing)
